Module observation :incoming_envelope:

--- a/.ftpconfig
+++ b/.ftpconfig
@@ -12,9 +12,7 @@
     "pasvTimeout": 10000, // integer - How long (in milliseconds) to wait for a PASV data connection to be established. Default: 10000
     "keepalive": 10000, // integer - How often (in milliseconds) to send a 'dummy' (NOOP) command to keep the connection alive. Default: 10000\. If set to 0, keepalive is disabled.
     "watch":[ // array - Paths to files, directories, or glob patterns that are watched and when edited outside of the atom editor are uploaded. Default : []
-        "dist/stylesheets/main.css", // reference from the root of the project.
-        "dist/stylesheets/",
-        "dist/stylesheets/*.css"
+        "modules/pbgroupeu/*"
     ],
     "watchTimeout":500 // integer - The duration ( in milliseconds ) from when the file was last changed for the upload to begin.
 }
