Crisp ftp configuratoin.

--- a/.ftpconfig
+++ b/.ftpconfig
@@ -11,7 +11,7 @@
     "connTimeout": 10000, // integer - How long (in milliseconds) to wait for the control connection to be established. Default: 10000
     "pasvTimeout": 10000, // integer - How long (in milliseconds) to wait for a PASV data connection to be established. Default: 10000
     "keepalive": 10000, // integer - How often (in milliseconds) to send a 'dummy' (NOOP) command to keep the connection alive. Default: 10000\. If set to 0, keepalive is disabled.
-    "watch":[ // array - Paths to files, directories, or glob patterns that are watched and when edited outside of the atom editor are uploaded. Default : []
+    "watch":[
         "modules/pbgroupeu/*"
     ],
     "watchTimeout":500 // integer - The duration ( in milliseconds ) from when the file was last changed for the upload to begin.
